[gd_scene load_steps=4 format=3 uid="uid://b7xgfeyqknxpf"]

[ext_resource type="PackedScene" path="res://Scenes/Player.tscn" id="1"]
[ext_resource type="Script" path="res://Scripts/Level.gd" id="2"]

[sub_resource type="Environment" id="1"]
background_mode = 4
glow_enabled = true
glow_levels/5 = 0.0
glow_blend_mode = 0
glow_hdr_threshold = 0.0
adjustment_enabled = true

[node name="Level" type="Node2D"]
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1366.0
offset_bottom = 768.0
color = Color(0, 0, 0, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(683, 432)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1366, 96)
offset_right = 1366.0
offset_bottom = 96.0

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(455, 96)
layout_mode = 2
color = Color(0.101961, 0.498039, 0.478431, 1)

[node name="PointsTillNext" type="Label" parent="HBoxContainer/ColorRect"]
custom_minimum_size = Vector2(455, 96)
layout_mode = 0
offset_right = 455.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.564706, 0.0941176, 0.745098, 1)
text = "Next Weapon at: 0 Enemies"

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(455, 96)
layout_mode = 2
color = Color(0.101961, 0.498039, 0.478431, 1)

[node name="CurrentWeapon" type="Label" parent="HBoxContainer/ColorRect2"]
custom_minimum_size = Vector2(455, 96)
layout_mode = 0
offset_right = 455.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.564706, 0.0941176, 0.745098, 1)
text = "You got the Hangun"

[node name="ColorRect3" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(455, 96)
layout_mode = 2
color = Color(0.101961, 0.498039, 0.478431, 1)

[node name="TotalScore" type="Label" parent="HBoxContainer/ColorRect3"]
custom_minimum_size = Vector2(455, 96)
layout_mode = 0
offset_right = 455.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.564706, 0.0941176, 0.745098, 1)
text = "Total Score: 0"

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
